# atlas-g-protocol

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GLAMA_BUILD_FIX.md  GLAMA_FIX.md  NOTES.MD  README.md  glama.json  mcp_config.json  package.json  pyproject.toml  requirements.txt  server.json
anchor/: 2026-01-28T10-05-anchor.md  2026-01-29T12-30-anchor.md  2026-04-18T02-05-anchor.md  2026_01_28_11_23_59.md
backend/: __init__.py  agent.py  config.py  governance.py  leads.py  main.py  mcp_server.py  notifications.py  persistence.py
backend/tests/: __init__.py  debug_gemini.py  list_models.py  test_red_team.py  test_streaming.py  test_streaming_logic.py  test_tools.py
backend/tools/: __init__.py  availability.py  profile_extractor.py  resume_rag.py  verification.py
bugs/: BUG-001.yaml  README.md
data/: leads.json  resume.example.txt  resume.template.txt  resume.txt
frontend/: index.html  package-lock.json  vite.config.ts
frontend/public/: klaxon.mov
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/components/: AudioInput.module.css  AudioInput.tsx  AuditLog.module.css  AuditLog.tsx  BootSequence.module.css  BootSequence.tsx  ChatPane.module.css  ChatPane.tsx  TerminalHeader.module.css  TerminalHeader.tsx
frontend/src/hooks/: useAtlasAgent.ts  useScramble.ts
frontend/src/lib/: socket.ts
notes_archive/: streaming_resolved_2026-01-28.md
scripts/: docker-entrypoint.sh
tests/: test_governance_v2.py  verify_law_models.py
